move devices to sidebar section

--- a/docs/use-the-network/devices/development/development.mdx
+++ b/docs/use-the-network/devices/development/development.mdx
@@ -1,28 +1,14 @@
 ---
 id: development
-title: Development
-pagination_label: Development
-sidebar_label: Manufacturers
+title: Development Devices
+pagination_label: Development Devices
+sidebar_label: Development Devices
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/devices/development
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
-
-<div class="container" style={{ padding: 0, marginBottom: 60 }}>
-  <div class="row">
-    <div class="col col--12">
-      <div class="flex" style={{ border: 'none' }}>
-        <img className="headericon" src={useBaseUrl('img/use-the-network/use1.svg')} />
-        <div className="headertext">
-          <h1 style={{ marginTop: 0 }}>Development Devices</h1>
-          <h2 className="subtitle">Manufacturers</h2>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
 <div class="container" style={{ padding: 0 }}>
   <div class="row">
