--- a/docs/use-the-network/devices/development/quickstart-guides.mdx
+++ b/docs/use-the-network/devices/development/quickstart-guides.mdx
@@ -1,14 +1,12 @@
 ---
 id: quickstart-guides
-title: Quickstart Guides
-pagination_label: Quickstart Guides
-sidebar_label: Quickstart Guides
+title: Development Device Quickstart Guides
+pagination_label: Development Device Quickstart Guides
+sidebar_label: Development Quickstart Guides
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/devices/development/quickstart-guides
 ---
-
-## Development Device Quickstart Guides
 
 Quickstart guides are provided for some of the most popular development boards. The guides cover
 every step needed to program and send packets on the network.
