--- a/docs/use-the-network/devices/devices.mdx
+++ b/docs/use-the-network/devices/devices.mdx
@@ -1,14 +1,12 @@
 ---
 id: devices
-title: Devices
-pagination_label: Devices
-sidebar_label: Devices
+title: Helium Devices
+pagination_label: Helium Devices
+sidebar_label: Introduction
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/devices
 ---
-
-# Helium Devices
 
 The Helium network supports any LoRaWAN capable device meeting the v1.0.2, v1.0.3, or v1.0.4
 specification.
