--- a/docs/use-the-network/devices/ready-to-use/ready-to-use.mdx
+++ b/docs/use-the-network/devices/ready-to-use/ready-to-use.mdx
@@ -1,28 +1,14 @@
 ---
 id: ready-to-use
-title: Ready To Use
-pagination_label: Ready To Use
-sidebar_label: Manufacturers
+title: Ready To Use Devices
+pagination_label: Ready To Use Devices
+sidebar_label: Ready To Use Devices
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/devices/ready-to-use
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
-
-<div class="container" style={{ padding: 0, marginBottom: 60 }}>
-  <div class="row">
-    <div class="col col--12">
-      <div class="flex" style={{ border: 'none' }}>
-        <img className="headericon" src={useBaseUrl('img/use-the-network/use1.svg')} />
-        <div className="headertext">
-          <h1 style={{ marginTop: 0 }}>Ready to Use Devices</h1>
-          <h2 className="subtitle">Manufacturers</h2>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
 <div class="container" style={{ padding: 0 }}>
   <div class="row">
