added program sdk links, sort lists alphabetically

--- a/docs/solana/migration/exchange.mdx
+++ b/docs/solana/migration/exchange.mdx
@@ -19,7 +19,18 @@ The documentation on Solana and the upcoming Migration is under development and 
 Helium will be transitioning from its own L1 to Solana. The proceedure for Helium should be the same
 as the proceedure for all other Solana SPL Tokens.
 
-All the tokens are on the `TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA` program.
+## Blockchain Integration
+
+If an exchange lareday supports [Solana SPL](https://spl.solana.com/token) tokens, follow the steps
+below.
+
+Otherwise, please refer to the Solana Documentation on how to
+[Add Solana to Your Exchange](https://docs.solana.com/integrations/exchange) for details.
+
+## Mint IDs
+
+All the tokens are on the
+[`TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA` program](https://explorer.solana.com/address/TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA).
 
 The mint IDs are as follows:
 
@@ -30,11 +41,9 @@ The mint IDs are as follows:
 | IOT    | iotEVVZLEywoTn1QdwNPddxPWszn3zFhEot3MfL9fns |
 | DC     | dcuc8Amr83Wz27ZkQ2K9NS6r8zRpf1J6cvArEBDZDmm |
 
-These mint IDs exist both on `mainnet-beta` and `devnet`, so you can test.
+These mint IDs exist both on `mainnet-beta` and `devnet` for testing.
 
-## Wallet Migration
-
-### Mapping Helium Wallets to Solana Wallets
+## Mapping Helium Wallets to Solana Wallets
 
 Helium wallets use the same ED25519 curve as Solana wallets. This means that Helium public keys and
 secret keys can be mapped directly to a Solana based wallet.
