--- a/docs/solana/solana.mdx
+++ b/docs/solana/solana.mdx
@@ -18,53 +18,79 @@ The documentation on Solana and the upcoming Migration is under development and 
 
 As of
 [HIP-70, Scaling the Helium Network](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md)
-helium is moving to the Solana blockchain.
+Helium is moving to the Solana blockchain.
+
+## Major Milestones
+
+- Available on Solana DevNet for testing [Deployed]
+- Smart Contract Audit [Ongoing]
+- MainNet Launch [Soon™]
+
+### Migration Process Steps
+
+1. The Helium blockchain will officially halt.
+2. Chain state will be snapshotted.
+3. Existing $HNT and $MOBILE will be mapped to Solana. Hotspots will be minted as NFTs.
+4. During the Migration, POC and Data Transfer will continue to function through the offchain
+   Oracle, rewards will be claimable after the transition phase (estimated 24-48 hours) is complete.
+5. Users and Exchanges can access their assets using the same private key on Solana (Solana and
+   Helium blockchain use the same [ed25519 encryption](https://en.wikipedia.org/wiki/EdDSA)
+   algorithm.)
+6. Programmatic Treasury is planned to be activated in 2023 Q2, users will be able to convert
+   $MOBILE and $IOT into $HNT on chain at that time.
 
 ## Migration Guides
 
 The following are migration guides for different users of Helium:
 
-- [Hotspot Owner](./solana/migration/hotspot-owner)
-- [Maker](./solana/migration/maker)
-- [Exchange](./solana/migration/exchange)
-- [LoRaWAN Network User](./solana/migration/network-user)
 - [Application Builder](./solana/migration/application-builder)
+- [Exchange](./solana/migration/exchange)
 - [Governance Participant](./solana/migration/governance)
+- [Hotspot Owner](./solana/migration/hotspot-owner)
 - [Ledger User](./solana/migration/ledger)
+- [LoRaWAN Network User](./solana/migration/network-user)
+- [Maker](./solana/migration/maker)
 
 ## Programs
 
 The code for all of these programs is open source, and available in
 [helium-program-library](https://github.com/helium/helium-program-library)
 
-These contracts (TODO: Not yet, when it's done link to audit report) have been audited by Sec3.
+:::info Program Audit
 
-| Name                  | Program ID                                  | Description                                                                                                                                                                             |
-| --------------------- | ------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| lazy_distributor      | 1azyuavdMyvsivtNxPoz6SucD18eDHeXzFCUPq5XU7w | Allows off-chain oracles to distribute PoC rewards to rewardable assets (like hotspots) that are represented as NFTs.                                                                   |
-| helium_sub_daos       | hdaoVTCqhfHHo75XdAMxBKdUqvq1i5bF23sisBqVgGR | Manages the DAO/SubDAO structure proposed in HIP-51, including the minting of tokens to subdaos, HST holders, and the `lazy_distributor` for PoC earnings.                              |
-| data_credits          | credMBJhYFzfn7NxBMdU4aUqFggAjgztaCcv2Fo6fPT | Manages the purchase, delegation, and burning of data credits.                                                                                                                          |
-| helium_entity_manager | hemjuPXBpNvggtaUnN1MwT3wrdhttKEfosTcc2P9Pg8 | Handles the issuance of NFTs representing entities that are rewardable on the Helium network, like hotspots and mappers.                                                                |
-| circuit_breaker       | circAbx64bbsscPbQzZAUvuXpHqrCe6fLMzc2uKXz9g | Generic program wrapping sensitive mint authorities and token accounts in the Helium system to prevent large movements in the case of an exploit or bug.                                |
-| treasury_management   | treaf4wWBBty3fHdyBpo35Mz84M8k3heKXmjmi9vFt5 | Mangages the treasury of each SubDAO as proposed in HIP-51, allowing DNT tokens to be swapped for HNT according to a formula.                                                           |
-| voter_stake_registry  | hvsrNC3NKbcryqDs2DocYHZ9yPKEVzdSjQG6RVtK1s8 | Handles voting power via veHNT in Helium Governance.                                                                                                                                    |
-| lazy_transactions     | 1atrmQs3eq1N2FEYWu6tyTXbCjP4uQwExpjtnhXtS8h | Used in the initial migration to Solana, this program allows compressing many transactions into a merkle root to be executed lazily. This guarentees all txs are executed exactly once. |
+These contracts are being audited by [Sec3](https://www.sec3.dev/). A link to audit report will be
+provided once complete.
+
+<!--TODO: Not yet, when it's done link to audit report  -->
+
+:::
+
+| Name                    | Program ID                                  | Description                                                                                                                                                                             |
+| ----------------------- | ------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `circuit_breaker`       | circAbx64bbsscPbQzZAUvuXpHqrCe6fLMzc2uKXz9g | Generic program wrapping sensitive mint authorities and token accounts in the Helium system to prevent large movements in the case of an exploit or bug.                                |
+| `data_credits`          | credMBJhYFzfn7NxBMdU4aUqFggAjgztaCcv2Fo6fPT | Manages the purchase, delegation, and burning of data credits.                                                                                                                          |
+| `helium_entity_manager` | hemjuPXBpNvggtaUnN1MwT3wrdhttKEfosTcc2P9Pg8 | Handles the issuance of NFTs representing entities that are rewardable on the Helium network, like hotspots and mappers.                                                                |
+| `helium_sub_daos`       | hdaoVTCqhfHHo75XdAMxBKdUqvq1i5bF23sisBqVgGR | Manages the DAO/SubDAO structure proposed in HIP-51, including the minting of tokens to subdaos, HST holders, and the `lazy_distributor` for PoC earnings.                              |
+| `lazy_distributor`      | 1azyuavdMyvsivtNxPoz6SucD18eDHeXzFCUPq5XU7w | Allows off-chain oracles to distribute PoC rewards to rewardable assets (like hotspots) that are represented as NFTs.                                                                   |
+| `lazy_transactions`     | 1atrmQs3eq1N2FEYWu6tyTXbCjP4uQwExpjtnhXtS8h | Used in the initial migration to Solana, this program allows compressing many transactions into a merkle root to be executed lazily. This guarentees all txs are executed exactly once. |
+| `treasury_management`   | treaf4wWBBty3fHdyBpo35Mz84M8k3heKXmjmi9vFt5 | Mangages the treasury of each SubDAO as proposed in HIP-51, allowing DNT tokens to be swapped for HNT according to a formula.                                                           |
+| `voter_stake_registry`  | hvsrNC3NKbcryqDs2DocYHZ9yPKEVzdSjQG6RVtK1s8 | Handles voting power via veHNT in Helium Governance.                                                                                                                                    |
 
 ## Packages (JS/Typescript)
 
-| Name                              | Description                                                                        |
-| --------------------------------- | ---------------------------------------------------------------------------------- |
-| @helium/lazy-distributor-sdk      | Sdk to the lazy distributor program                                                |
-| @helium/helium-sub-daos-sdk       | Sdk to Helium sub daos program                                                     |
-| @helium/data-credits-sdk          | Sdk to the data credits program                                                    |
-| @helium/helium-entity-manager-sdk | Sdk to the Helium entity manager program                                           |
-| @helium/circuit-breaker-sdk       | Sdk to circuit breaker program                                                     |
-| @helium/treasury-management-sdk   | Sdk to the treasury management program                                             |
-| @helium/voter-stake-registry-sdk  | Sdk to the voter stake registry program                                            |
-| @helium/lazy-transactions-sdk     | Sdk to lazy transactions program                                                   |
-| @helium/idls                      | IDLs containing the typescript definitions for the raw anchor SDKs of our programs |
-| @helium/spl-utils                 | General utils for interacting with Solana, tokens, etc                             |
-| @helium/distributor-oracle        | Sdk for interacting with the lazy-distributor oracles to claim rewards             |
+| Name                                                                                                                                 | Description                                                                        |
+| ------------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------- |
+| [@helium/circuit-breaker-sdk](https://github.com/helium/helium-program-library/tree/master/packages/circuit-breaker-sdk)             | SDK to circuit breaker program                                                     |
+| [@helium/data-credits-sdk](https://github.com/helium/helium-program-library/tree/master/packages/data-credits-sdk)                   | SDK to the data credits program                                                    |
+| [@helium/distributor-oracle](https://github.com/helium/helium-program-library/tree/master/packages/distributor-oracle)               | SDK for interacting with the lazy-distributor oracles to claim rewards             |
+| [@helium/helium-entity-manager-sdk](https://github.com/helium/helium-program-library/tree/master/packages/helium-entity-manager-sdk) | SDK to the Helium entity manager program                                           |
+| [@helium/helium-sub-daos-sdk](https://github.com/helium/helium-program-library/tree/master/packages/helium-sub-daos-sdk)             | SDK to Helium sub daos program                                                     |
+| [@helium/idls](https://github.com/helium/helium-program-library/tree/master/packages/idls)                                           | IDLs containing the typescript definitions for the raw anchor SDKs of our programs |
+| [@helium/lazy-distributor-sdk](https://github.com/helium/helium-program-library/tree/master/packages/lazy-distributor-sdk)           | SDK to the lazy distributor program                                                |
+| [@helium/lazy-transactions-sdk](https://github.com/helium/helium-program-library/tree/master/packages/lazy-transactions-sdk)         | SDK to lazy transactions program                                                   |
+| [@helium/spl-utils](https://github.com/helium/helium-program-library/tree/master/packages/spl-utils)                                 | General utils for interacting with Solana, tokens, etc                             |
+| [@helium/treasury-management-sdk](https://github.com/helium/helium-program-library/tree/master/packages/treasury-management-sdk)     | SDK to the treasury management program                                             |
+| [@helium/voter-stake-registry-sdk](https://github.com/helium/helium-program-library/tree/master/packages/voter-stake-registry-sdk)   | SDK to the voter stake registry program                                            |
 
 ## Important Addresses and Links
 
