--- a/docs/oracles/rewards-oracles.mdx
+++ b/docs/oracles/rewards-oracles.mdx
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 :::warning 🚧 This document is a work in progress. 🚧
 
-The documentation on Solana and the upcoming Migration is under development and subject to change.
+The documentation on Oracles and the upcoming Migration is under development and subject to change.
 
 :::
 
