Slight changes for Oracle-Based PoC.

--- a/docs/blockchain/consensus-protocol.mdx
+++ b/docs/blockchain/consensus-protocol.mdx
@@ -81,8 +81,8 @@ overview of token reward system can be [viewed here](https://www.helium.com/toke
 
 During the course of any epoch, Hotspots are rewarded for the following list of activities:
 
-- Successful participation in proof of coverage as a target
-- Witnessing a proof of coverage challenge
+- Successful participation in proof of coverage as a beaconer
+- Witnessing a proof of coverage beacon
 - Transferring device data over the network
 
 During the course of any epoch, Validators are rewarded for the following list of activities per
