swap challengee for beaconer

--- a/docs/mine-hnt/understanding-hotspot-status.mdx
+++ b/docs/mine-hnt/understanding-hotspot-status.mdx
@@ -31,7 +31,7 @@ Blockchain Activity can include:
 
 - added to the network for the first time
 - created a challenge
-- was a challengee (initiated the Challenge, from a Challenger) in a Proof-of-Coverage event
+- was a beaconer in a Proof-of-Coverage event
 - was a witness in a Proof-of-Coverage event
 - transferred device packets for a device
 - received mining rewards
