--- a/docs/wallets/app-wallet/hexagons.mdx
+++ b/docs/wallets/app-wallet/hexagons.mdx
@@ -141,7 +141,7 @@ Previously known as Reward Scale, the Transmit Scale has been renamed to properl
 number conveys.
 
 **Transmit scale is a multiplier that is applied to rewards of _any Hotspot that witnesses you_. The
-scale also affects how many rewards you receive as a Challengee.**
+scale also affects how many rewards you receive as a Beaconer.**
 
 The number is a representation of how dense a hexagon is (how many Hotspots occupy that hex) at
 various resolutions (from resolution 12 down to resolution 4). This means that if any Hotspots
