Oracle-Based PoC documentation updates (#1081)
* initial commit

* remove challenger role from mining doc

* line wrap

* removing challenger references and roles, line wrap

* historical context into foldable section

* notes on oracles

* grammar fixes

* remove challenger references

* update reward distribution chart

* remove gRPC notes

* remove challenger role and update challenger previous reward rate

* swap “Off-Chain” for “Oracled”

- swap “Off-Chain” for “Oracled”
- reward difference explained (tiny bites, not random chomps)
- self beacon interval and jitter

* Slight changes for Oracle-Based PoC.

* swap challengee for beaconer

---------

Co-authored-by: Jeremy Cooper <jeremy.gthb@baymoo.org>

--- a/docs/blockchain/consensus-protocol.mdx
+++ b/docs/blockchain/consensus-protocol.mdx
@@ -81,14 +81,13 @@ overview of token reward system can be [viewed here](https://www.helium.com/toke
 
 During the course of any epoch, Hotspots are rewarded for the following list of activities:
 
-- Successful participation in proof of coverage as a target \(as a “challengee”\)
-- Witnessing a proof of coverage challenge
+- Successful participation in proof of coverage as a beaconer
+- Witnessing a proof of coverage beacon
 - Transferring device data over the network
 
 During the course of any epoch, Validators are rewarded for the following list of activities per
 changes from [HIP 55](https://github.com/helium/HIP/blob/main/0055-validator-challenges.md):
 
-- Submitting valid proof of coverage challenges \(as a “challenger”\)
 - Serving as consensus group member
 
 The Consensus Group then splits `6%` of all HNT mined, as well as any transaction fees collected
