--- a/docs/blockchain/mining.mdx
+++ b/docs/blockchain/mining.mdx
@@ -26,23 +26,13 @@ Every epoch, the current consensus group mines approximately 30 blocks on the bl
 block, Hotspots perform various types of work and are awarded according to the following
 distribution:
 
-| Reward Type           | Chain Variable          | Description                                                                                                                                  |
-| :-------------------- | :---------------------- | :------------------------------------------------------------------------------------------------------------------------------------------- |
-| PoC Challengees       | poc_challengees_percent | Awarded to any Hotspot that transmits a PoC packet after being targeted by the challenger.                                                   |
-| PoC Challenger        | poc_challengers_percent | Rewarded to any **Validator\*** that creates a valid PoC challenge and submits the corresponding receipt to the blockchain. (see note below) |
-| Witnesses             | poc_witnesses_percent   | Distributed to selected Hotspots that witness a beacon packet as part of a PoC Challenge.                                                    |
-| Consensus Group       | consensus_percent       | Divided equally among the Validators that are part of the outgoing Consensus Group, responsible for mining blocks.                           |
-| Security              | securities_percent      | Awarded to Network investors who hold Security Tokens.                                                                                       |
-| Network Data Transfer | dc_percent              | Distributed each epoch to Hotspots that route LoRaWAN sensor data for sensors on the Network during that epoch.                              |
-
-:::note
-
-[HIP55](https://github.com/helium/HIP/blob/main/0055-validator-challenges.md) moved the
-resposibiility of creating PoC Challenges to Validators, and as such PoC Rewards (chain_var
-`pos_challengers_percent`) are now awarded to any Validator that creates a valid PoC challenge and
-submits the corresponding receipt to the blockchain.
-
-:::
+| Reward Type           | Chain Variable            | Description                                                                                                        |
+| :-------------------- | :------------------------ | :----------------------------------------------------------------------------------------------------------------- |
+| PoC Beaconers         | `poc_challengees_percent` | Awarded to any Hotspot that successfully transmits a PoC beacon packet.                                            |
+| Witnesses             | `poc_witnesses_percent`   | Distributed to selected Hotspots that witness a PoC beacon packet.                                                 |
+| Consensus Group       | `consensus_percent`       | Divided equally among the Validators that are part of the outgoing Consensus Group, responsible for mining blocks. |
+| Security              | `securities_percent`      | Awarded to Network investors who hold Security Tokens.                                                             |
+| Network Data Transfer | `dc_percent`              | Distributed each epoch to Hotspots that route LoRaWAN sensor data for sensors on the Network during that epoch.    |
 
 **_Do I Have To Actively Participate to Earn Rewards Once My Hotspot is Deployed?_**
 
@@ -84,15 +74,14 @@ Below are the mining rewards per epoch as of August 1, 2022. For every complete 
 election of a new Consensus Group, all the HNT produced are distributed over the following reward
 types:
 
-| Reward Type           | Percentage      | HNT Earned by Reward Type |
-| :-------------------- | :-------------- | :------------------------ |
-| PoC Challenger        | 0.85%           | 14.7236                   |
-| PoC Challengees       | 4.73% - 12.23%  | 82.1247 - 212.331         |
-| Witnesses             | 18.92% - 48.92% | 328.4989 - 849.3323       |
-| Consensus Group       | 6%              | 104.1667                  |
-| Security Tokens       | 32%             | 555.5556                  |
-| Network Data Transfer | _Up to 37.50%_  | _Up to 651.0417_          |
-| **Total**             | **100%**        | **1736.1111**             |
+| Reward Type           | Percentage       | HNT Earned by Reward Type |
+| :-------------------- | :--------------- | :------------------------ |
+| PoC Beaconers         | 4.73% - 12.665%  | 82.1181 - 219.7049        |
+| Witnesses             | 18.92% - 49.345% | 328.4722 - 856.6840       |
+| Consensus Group       | 6%               | 104.1667                  |
+| Security Tokens       | 32%              | 555.5556                  |
+| Network Data Transfer | _Up to 37.50%_   | _Up to 651.0417_          |
+| **Total**             | **100%**         | **1736.1111**             |
 
 **Rewards Change Over Time**
 
@@ -102,11 +91,10 @@ In the above table, you can see the maximum allotted rewards per reward type fol
 currently scheduled for **August 1, 2023** and will be updated along with changes related to the
 havening to maintain max HNT supply.
 
-## HIP10 and Variable HNT Rewards for Network Data Transfer
+## HIP-10 and Variable HNT Rewards for Network Data Transfer
 
 As noted above,
-[HIP10 was activated on August 24th, 2020](https://github.com/helium/HIP/blob/master/0010-usage-based-data-transfer-rewards.md).
-HIP10 was introduced by Helium Community Member `hashc0de` and was adopted by the Helium Community.
+[HIP-10 was activated on August 24th, 2020](https://github.com/helium/HIP/blob/master/0010-usage-based-data-transfer-rewards.md).
 
 It ensures that HNT is rewarded at a rate of 1:1 to the amount of Data Credits (DCs) routed by any
 given Hotspot per epoch. In doing so, the Network Data Transfer reward is proportional to the DC
@@ -126,8 +114,8 @@ Here are a few examples to illustrate how this works in practice:
 - These `10 HNT` would be split proportionally to the Hotspots that did the work routing packets at
   the 1:1 rate.
 - The remaining `641.0417` from the Network Data Transfer reward would be distributed by weight
-  among the Witnesses and Challengees.
-  - `128.2083` to the Challengee group => `4.73/(4.73+18.92) = 20%`
+  among the Witnesses and Beaconers.
+  - `128.2083` to the Beaconer group => `4.73/(4.73+18.92) = 20%`
   - `512.8333` to the Witness group => `18.92/(4.73+18.92) = 80%`
 
 **Example 2: DC Burn exceeds 37.50% HNT**
@@ -144,20 +132,14 @@ calculation is:`(800,000,000 DC * $0.00001 / $8.00 HNT Oracle Price)`
 ### Additional Notes on Reward Types and Payouts
 
 - All Validators in the `Consensus Group` will earn an equal reward.
-- All Hotspots participating in PoC, including `Challengees` and `Witnesses` will earn rewards
+- All Hotspots participating in PoC, including `Beaconers` and `Witnesses` will earn rewards
   proportional to how many events they participated in out of the total number of events per epoch.
 - All Hotspots participating in `Network Data Transfer` will earn rewards proportional to their
   share of the total data transfer in that epoch, as shown above.
 - Hotspots can earn one or more reward types during any given epoch.
-- `PoC Challenger`, `PoC Challengee`, and `Witness` reward types get distributed in the epoch that
-  includes the corresponding PoC receipt.
-- A Hotspots can earn more than one `PoC Challengee` and `Witness` rewards per epoch.
-- Validators use the `poc_challenge_rate` chain_var that defines the target number of Challenges per
-  block. See
-  [HIP55](https://github.com/helium/HIP/blob/main/0055-validator-challenges.md#poc-challenge-creation-and-the-consensus-group)
-  for more details.
-- `Challenger` rewards are distributed to Validators that create and collect Challenge data and
-  submit this information to the blockchain.
+- `PoC Beacon` and `Witness` reward types get distributed in the epoch that includes the
+  corresponding PoC receipt.
+- A Hotspots can earn more than one `PoC Beacon` and `Witness` reward per epoch.
 
 ## HNT Proration and Slow Block Times
 
@@ -193,10 +175,10 @@ not clocks. Here's a step-by-step example to make it clearer:
 ### When Block Times Slow Down, Everyone Earns Less
 
 The most important takeaway here is that, when block times slow and HNT production is reduced,
-everyone participating in the Network - Witnesses, Challengers, Security Token Holders, etc. - **is
-impacted equally** (except for Consensus Group members; more on this below). So, although it's
-annoying that the effective rate of HNT may have dropped over a given period of time, know that
-you're not the only one earning less. And this is by design.
+everyone participating in the Network - Witnesses, Security Token Holders, etc. - **is impacted
+equally** (except for Consensus Group members; more on this below). So, although it's annoying that
+the effective rate of HNT may have dropped over a given period of time, know that you're not the
+only one earning less. And this is by design.
 
 ### Consensus Groups and Slow Block Times
 
