--- a/docs/mine-hnt/maker-apps.mdx
+++ b/docs/mine-hnt/maker-apps.mdx
@@ -340,6 +340,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 ### RisingHF
 
 - Discord : https://discord.gg/MkD2X2NSUd
+- iOS App: https://apps.apple.com/app/risinghfhotspots/id1628074599
 - Android App: https://play.google.com/store/apps/details?id=com.risinghf.hotspot
 
 :::note This Maker has not yet submitted an iOS App for inclusion on this page.
