Minor typographical change

--- a/docs/solana/migration/exchange.mdx
+++ b/docs/solana/migration/exchange.mdx
@@ -21,7 +21,7 @@ as the proceedure for all other Solana SPL Tokens.
 
 ## Blockchain Integration
 
-If an exchange lareday supports [Solana SPL](https://spl.solana.com/token) tokens, follow the steps
+If an exchange already supports [Solana SPL](https://spl.solana.com/token) tokens, follow the steps
 below.
 
 Otherwise, please refer to the Solana Documentation on how to
