--- a/docs/solana/solana.mdx
+++ b/docs/solana/solana.mdx
@@ -43,13 +43,13 @@ Helium is moving to the Solana blockchain.
 
 The following are migration guides for different users of Helium:
 
-- [Application Builder](./migration/application-builder)
-- [Exchange](./migration/exchange)
-- [Governance Participant](./migration/governance)
-- [Hotspot Owner](./migration/hotspot-owner)
-- [Ledger User](./migration/ledger)
-- [LoRaWAN Network User](./migration/network-user)
-- [Maker](./solana/migration/maker)
+- [Application Builder](/solana/migration/application-builder)
+- [Exchange](/solana/migration/exchange)
+- [Governance Participant](/solana/migration/governance)
+- [Hotspot Owner](/solana/migration/hotspot-owner)
+- [Ledger User](/solana/migration/ledger)
+- [LoRaWAN Network User](/solana/migration/network-user)
+- [Maker](/solana/migration/maker)
 
 ## Programs
 
