--- a/docs/solana/oracle-data.mdx
+++ b/docs/solana/oracle-data.mdx
@@ -29,43 +29,78 @@ the [Helium Program Libraries](https://github.com/helium/helium-program-library)
 
 ### AWS S3 Buckets
 
-Data is directly accessible from the following buckets in AWS `us-west-2`. All data provided in
-these S3 buckets is provided on a basis of 'Requestor Pays'. For more information on accessing data
-from these buckets, refer to
-[Downloading objects in Requester Pays buckets](https://docs.aws.amazon.com/AmazonS3/latest/userguide/ObjectsinRequesterPaysBuckets.html).
+Data is directly accessible from the `foundation-poc-data-requester-pays` bucket in AWS `us-west-2` 
+under the top level data category prefixes listed below. All data provided in the S3 bucket is 
+made availabe on a basis of 'Requestor Pays' meaning you, the requester, will pay for the data 
+transfer and API costs incurred from the data requests. For more information on accessing data from 
+a requester pays bucket, refer to [Downloading objects in Requester Pays buckets](https://docs.aws.amazon.com/AmazonS3/latest/userguide/ObjectsinRequesterPaysBuckets.html).
 
-The bucket policies include the `s3:ListBucket` and `s3:GetObject` actions so execution of AWS CLI
-commands such as `aws s3 ls`, `aws s3 cp`, and `aws s3 sync` will work. Example commands provided
-below:
+   | Top Level Data Category Prefixes |
+   | -------------------------------- |
+   | `foundation-iot-entropy`         |
+   | `foundation-iot-ingest`          |
+   | `foundation-iot-packet-ingest`   |
+   | `foundation-iot-packet-verifier` |
+   | `foundation-verified-rewards`    |
+   | `foundation-mobile-ingest`       |
+   | `foundation-mobile-verified`     |
 
-```bash
-aws s3 ls s3://<source_bucket_name>/historical/ --request-payer
-```
+Under each data category prefix, the relating PoC data is segmented into `historical` and `<date>` 
+sub-prefixes, where `<date>` is in `YYYY-MM-DD` format, starting from Feburary 19th, 2023 onward. 
+For example, PoC data produced each day is comprised within a sub-prefix of `YYYY-MM-DD` format, so 
+data produced on Feburary 20th, 2023 will be under a `2023-02-20` sub-prefix, data produced on 
+Feburary 21st, 2023 will be under a `2023-02-21` sub-prefix, and so on. Any data produced before 
+Feburary 19th, 2023 is stored under the `historical` prefix. The data flowing into the buckets is 
+occuring in near-real time. 
 
-```bash
-aws s3 cp s3://<source_bucket_name>/historical/ s3://<dest_bucket_name>  --recursive --request-payer
-```
-
-```bash
-aws s3 sync s3://<source_bucket_name>/historical/ s3://<dest_bucket_name> --request-payer
-```
-
-Be mindful that AWS will charge you for:
+The file structure noted above is used to provide more cost efficient access patterns 
+when retrieving raw PoC data from S3. Be mindful that AWS will charge you for:
 
 1. Storage costs on any destination buckets.
 2. Egress fees if the data leaves `us-west-2`.
 3. `PUT`, `COPY`, `POST`, `LIST` requests. To that end, keeping data in `us-west-2` and using the
-   **`aws s3 cp`** (rather than `aws s3 sync` command) will save you significant money.
+   **`aws s3 cp`** (rather than `aws s3 sync` command) will save you significant money over time.
 
-   | BucketNames                         |
-   | ----------------------------------- |
-   | `foundation-iot-entropy-rp`         |
-   | `foundation-iot-ingest-rp`          |
-   | `foundation-iot-packet-ingest-rp`   |
-   | `foundation-iot-packet-verifier-rp` |
-   | `foundation-verified-rewards-rp`    |
-   | `foundation-mobile-ingest-rp`       |
-   | `foundation-mobile-verified-rp`     |
+Accordingly, by using any of the example `aws s3 ls`, `aws s3 cp`, or `aws s3 sync` commands listed 
+below, S3 API call cost overhead will be limited to the sub-prefix, rather than encompassing the 
+total file quanity comprised within the top level data category prefixes. 
+
+```bash
+aws s3 ls s3://foundation-poc-data-requester-pays/<top_level_data_category_prefix>/<historical|date>/ --request-payer
+```
+
+```bash
+aws s3 cp s3://foundation-poc-data-requester-pays/<top_level_data_category_prefix>/<historical|date>/ s3://<dest_bucket_name> --recursive --request-payer
+```
+
+```bash
+aws s3 sync s3://foundation-poc-data-requester-pays/<top_level_data_category_prefix>/<historical|date>/ s3://<dest_bucket_name> --request-payer
+```
+
+The raw PoC data stored in the `foundation-poc-data-requester-pays` bucket is in encoded protobuf
+format. The table below provies the top level data category prefixes, the file types comprised 
+within each data category prefix, the filename pattern for each file type, and provides a link to 
+the corresponding protobuf used to decode the data.
+
+| Category | File Type | Pattern | Protobuf |
+| :--- | :--- | :-- | :-- |
+| foundation-iot-entropy | Entropy | entropy.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/entropy.proto#L5) |
+| foundation-iot-ingest | IotBeaconIngestReport | iot_beacon_ingest_report.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L83) |
+| foundation-iot-ingest | IotWitnessIngestReport | iot_witness_ingest_report.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L90) |
+| foundation-iot-packet-ingest | Coming soon |
+| foundation-iot-packet-verifier | Coming soon |
+| foundation-verified-rewards | IotPoc | iot_poc.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L162) |
+| foundation-verified-rewards | IotInvalidBeaconReport | iot_invalid_beacon.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L125) |
+| foundation-verified-rewards | IotInvalidWitnessReport | iot_invalid_witness.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L133) |
+| foundation-verified-rewards | GatewayRewardShare | gateway_reward_share.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L171) |
+| foundation-verified-rewards| RewardManifest | reward_manifest.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/reward_manifest.proto#L5) |
+| foundation-mobile-ingest | CellHeartbeatIngestReport | heartbeat_report.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L50) |
+| foundation-mobile-ingest | CellSpeedtestIngestReport | speedtest_report.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L25) |
+| foundation-mobile-ingest | DataTransferSessionIngestReport | data_transfer_session_ingest_report.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L177) |
+| foundation-mobile-verified | ValidatedHeartbeat | validated_heartbeat.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L80) |
+| foundation-mobile-verified | SpeedtestAvg | speedtest_avg.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L97) | 
+| foundation-mobile-verified | RadioRewardShare | radio_reward_share.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L118) |
+| foundation-mobile-verified | RewardManifest | reward_manifest.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/reward_manifest.proto#L5) |
 
 ### Arweave
 
