--- a/docs/solana/oracle-data.mdx
+++ b/docs/solana/oracle-data.mdx
@@ -31,7 +31,7 @@ the [Helium Program Libraries](https://github.com/helium/helium-program-library)
 
 Data is directly accessible from the `foundation-poc-data-requester-pays` bucket in AWS `us-west-2` 
 under the top level data category prefixes listed below. All data provided in the S3 bucket is 
-made availabe on a basis of 'Requestor Pays' meaning you, the requester, will pay for the data 
+made available on a basis of 'Requestor Pays' meaning you, the requester, will pay for the data 
 transfer and API costs incurred from the data requests. For more information on accessing data from 
 a requester pays bucket, refer to [Downloading objects in Requester Pays buckets](https://docs.aws.amazon.com/AmazonS3/latest/userguide/ObjectsinRequesterPaysBuckets.html).
 
@@ -46,12 +46,12 @@ a requester pays bucket, refer to [Downloading objects in Requester Pays buckets
    | `foundation-mobile-verified`     |
 
 Under each data category prefix, the relating PoC data is segmented into `historical` and `<date>` 
-sub-prefixes, where `<date>` is in `YYYY-MM-DD` format, starting from Feburary 19th, 2023 onward. 
+sub-prefixes, where `<date>` is in `YYYY-MM-DD` format, starting from February 19th, 2023 onward. 
 For example, PoC data produced each day is comprised within a sub-prefix of `YYYY-MM-DD` format, so 
-data produced on Feburary 20th, 2023 will be under a `2023-02-20` sub-prefix, data produced on 
-Feburary 21st, 2023 will be under a `2023-02-21` sub-prefix, and so on. Any data produced before 
-Feburary 19th, 2023 is stored under the `historical` prefix. The data flowing into the buckets is 
-occuring in near-real time. 
+data produced on February 20th, 2023 will be under a `2023-02-20` sub-prefix, data produced on 
+February 21st, 2023 will be under a `2023-02-21` sub-prefix, and so on. Any data produced before 
+February 19th, 2023 is stored under the `historical` prefix. The data flowing into the buckets is 
+occurring in near-real time. 
 
 The file structure noted above is used to provide more cost efficient access patterns 
 when retrieving raw PoC data from S3. Be mindful that AWS will charge you for:
