Updating based on JH review

--- a/docs/solana/oracle-data.mdx
+++ b/docs/solana/oracle-data.mdx
@@ -50,7 +50,7 @@ structure in the format provided below:
 
 `s3://foundation-poc-data-requester-pays/<top-level-data-category-prefix>/<filename>.gz`
 
-Again, as the `foundation-poc-data-requester-pays` bucket i 'Requestor Pays', you should be mindful 
+Again, as the `foundation-poc-data-requester-pays` bucket is 'Requestor Pays', you should be mindful 
 that AWS will charge you for:
 
 1. Storage costs on any destination buckets
