Moves `oracle-data` page :arrow_right: /oracles/

--- a/docs/oracles/oracle-data.mdx
+++ b/docs/oracles/oracle-data.mdx
@@ -5,7 +5,7 @@ pagination_label: Oracle Data
 sidebar_label: Oracle Data
 description: Helium Oracle Data Documentation
 image: https://i.imgur.com/bWAbESE.png
-slug: /solana/oracle-data
+slug: /oracles/oracle-data
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
