--- a/docs/use-the-network/use-the-network.mdx
+++ b/docs/use-the-network/use-the-network.mdx
@@ -117,7 +117,7 @@ the two most relevant for developers using the Network.
       <p className="podtext">
         We love seeing community projects that utilise the network in clever new ways.
       </p>
-      <a href="/use-the-network">
+      <a href="/use-the-network/community-projects">
         Learn More <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
       <h5>Quick Links</h5>
