replace `note` with `info` - admonitions

--- a/docs/api/blockchain/accounts.mdx
+++ b/docs/api/blockchain/accounts.mdx
@@ -1011,7 +1011,7 @@ _Query Parameters_
 
 200: OK
 
-:::note Transaction Units
+:::info Transaction Units
 
 Remember that transaction units are in `bones`. Read more
 [here](/api/blockchain/introduction/#transaction-units)
@@ -1213,7 +1213,7 @@ _Query Parameters_
 
 A single pending transaction for a given account
 
-:::note Transaction Units
+:::info Transaction Units
 
 Remember that transaction units are in `bones`. Read more
 [here](/api/blockchain/introduction/#transaction-units)
