--- a/docs/api/blockchain/oracle-prices.mdx
+++ b/docs/api/blockchain/oracle-prices.mdx
@@ -216,7 +216,7 @@ _Path Parameters_
 
 200: OK
 
-:::note Transaction Units
+:::info Transaction Units
 
 Remember that transaction units are in `bones`. Read more
 [here](/api/blockchain/introduction/#transaction-units)
@@ -280,7 +280,7 @@ _Query Parameters_
 
 200: OK
 
-:::note Transaction Units
+:::info Transaction Units
 
 Remember that transaction units are in `bones`. Read more
 [here](/api/blockchain/introduction/#transaction-units)
