--- a/docs/mine-hnt/crowdspot.mdx
+++ b/docs/mine-hnt/crowdspot.mdx
@@ -32,7 +32,7 @@ of a Hotspot requires a Crowdspot account associated with a unique Helium Wallet
 If you do not have the [Helium Wallet app](/wallets/helium-wallet-app), you'll need to download the
 app and create a new wallet or import an existing wallet before proceeding.
 
-:::note Crowdspot Connections are Free
+:::info Crowdspot Connections are Free
 
 There are 0 fees to connect a Helium Wallet address to Crowdspot.
 
@@ -100,7 +100,7 @@ address. The Profile badge will match in the Helium Wallet app and on Crowdspot.
 Otherwise, if no account is logged in, no Profile Badge is visible, and the `Login` menu bar item is
 shown.
 
-:::note Login Status Indication
+:::info Login Status Indication
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
@@ -167,7 +167,7 @@ evaluation. A minimum of 150 characters is required.
 
 Once you have added all the required and optional information, click the `Create Submission` button.
 
-:::note Submission Status
+:::info Submission Status
 
 You can view the status of your submission on the
 [Submissions page](https://www.crowdspot.io/submissions/), linked in the Crowdspot menu bar.
@@ -244,7 +244,7 @@ provided.
   </div>
 </div>
 
-:::note Voter Verification
+:::info Voter Verification
 
 You must be logged in to Crowdspot by connecting a valid Helium Wallet to cast a vote.
 
@@ -260,7 +260,7 @@ See the section below on how to
 Crowdspot provides insight to several metrics for a given Hotspot that can be used to assist the
 Community in identifying abnormal Hotpots and validating legitimate Hotspots.
 
-:::note Current Denylist Status
+:::info Current Denylist Status
 
 If a Hotspot is currently on the Denylist, they will have a special badge on their page. This badge
 is -not- present for Hotspots -not- currently on the Denylist.
