--- a/docs/mine-hnt/helium-hotspot-app.mdx
+++ b/docs/mine-hnt/helium-hotspot-app.mdx
@@ -58,7 +58,7 @@ updates.
 - Original Helium Hotspots will be managed by the Helium App.
 - All remaining Wallet functionality will use the Helium Wallet app.
 
-:::note What If I Miss The Wallet Migration Deadline?
+:::info What If I Miss The Wallet Migration Deadline?
 
 Users that do not transition to the Helium Wallet app prior to the Solana blockchain migration will
 still be able to access their seed phrase and transition to the Helium Wallet app but will not be
@@ -78,7 +78,7 @@ owners.
 
 The minimum app version will change with each Maker - please check with them for exact details.
 
-:::note Maker Updates
+:::info Maker Updates
 
 Note that Makers that do not update their Maker apps will mean their customers will not be able to
 add new Hotspots to the network, transfer existing Hotspots, or assert locations.
