--- a/docs/mine-hnt/maker-apps.mdx
+++ b/docs/mine-hnt/maker-apps.mdx
@@ -119,7 +119,7 @@ New makers are required to have a Maker App available before HIP 19 maker approv
 
 - Discord : https://discord.gg/HCp6wBuhwF
 
-:::note This Maker has not yet submitted an App for inclusion on this page.
+:::info This Maker has not yet submitted an App for inclusion on this page.
 
 Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
@@ -137,7 +137,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 - Discord : https://discord.gg/KSwbc6EsRJ
 
-:::note This Maker has not yet submitted an App for inclusion on this page.
+:::info This Maker has not yet submitted an App for inclusion on this page.
 
 Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
@@ -160,7 +160,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 - Maker Apps: https://www.embitminer.com/slides/embit-hot-spot-app-8
 
-:::note This Maker has not yet submitted an App for inclusion on this page.
+:::info This Maker has not yet submitted an App for inclusion on this page.
 
 Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
@@ -259,7 +259,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 - Discord : https://discord.gg/BZPShbNXYb
 
-:::note This Maker has not yet submitted an App for inclusion on this page.
+:::info This Maker has not yet submitted an App for inclusion on this page.
 
 Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
@@ -267,7 +267,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 ### OPTION
 
-:::note This Maker has not yet submitted an App for inclusion on this page.
+:::info This Maker has not yet submitted an App for inclusion on this page.
 
 Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
@@ -279,7 +279,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 - Android App: https://play.google.com/store/apps/details?id=com.osprey.electronics
 - iOS App: https://apps.apple.com/us/app/osprey-electronics-hotspot/id1616301064
 
-:::note This Maker has not yet submitted an App for inclusion on this page.
+:::info This Maker has not yet submitted an App for inclusion on this page.
 
 Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
@@ -287,7 +287,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 ### OXIT
 
-:::note This Maker has not yet submitted an App for inclusion on this page.
+:::info This Maker has not yet submitted an App for inclusion on this page.
 
 Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
@@ -297,7 +297,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 - Discord : https://discord.gg/PGeJPDUs8d
 
-:::note This Maker has not yet submitted an App for inclusion on this page. ETA End Jan
+:::info This Maker has not yet submitted an App for inclusion on this page. ETA End Jan
 
 Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
@@ -325,7 +325,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 ### Pycom
 
-:::note This Maker has not yet submitted an App for inclusion on this page.
+:::info This Maker has not yet submitted an App for inclusion on this page.
 
 Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
@@ -355,7 +355,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 - Discord : https://discord.gg/45dhnE3bdd
 
-:::note This Maker has not yet submitted an App for inclusion on this page.
+:::info This Maker has not yet submitted an App for inclusion on this page.
 
 The company is in liquidation and unlikely to release one. Check the Helium Discord for support by
 other vendors.
@@ -366,7 +366,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 ### Tektelic
 
-:::note This Maker has not yet submitted an App for inclusion on this page.
+:::info This Maker has not yet submitted an App for inclusion on this page.
 
 Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
@@ -374,7 +374,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 ### TMG
 
-:::note This Maker has not yet submitted an App for inclusion on this page.
+:::info This Maker has not yet submitted an App for inclusion on this page.
 
 Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
