--- a/docs/mine-hnt/validators/monitoring.mdx
+++ b/docs/mine-hnt/validators/monitoring.mdx
@@ -33,7 +33,7 @@ Source: `miner peer book -s`
 
 Docker: `docker exec validator miner peer book -s`
 
-:::note
+:::info
 
 It could take several minutes before the peers appear in the table.
 
