--- a/docs/mine-hnt/validators/validators-and-voting-power.mdx
+++ b/docs/mine-hnt/validators/validators-and-voting-power.mdx
@@ -112,7 +112,7 @@ Stakers will additionally be able to delegate veHNT to a subDAO for token reward
 to a subDAO will count towards the DAO Utility Score, the `V` value referenced in
 [HIP-51](https://github.com/helium/HIP/blob/main/0051-helium-dao.md#omni-protocol-poc-incentive-model).
 
-:::note Utitily Score impacts HNT Proportion for a subDAO
+:::info Utitily Score impacts HNT Proportion for a subDAO
 
 The higher the DAO Utility Score in relation to the DAO Utility score of other SubDAOs, the higher
 the proportion of HNT earned by the individual subDAO treasury each epoch.
@@ -216,7 +216,7 @@ to 100.
 > immediately, after six months, my veHNT decays to 0 until my 10 HNT unlocks and is available to me
 > for use in my wallet.
 
-:::note Lock-up exchange rates subject to change
+:::info Lock-up exchange rates subject to change
 
 Proposals are in review and subject to vote to change the linear scale from 0-100 over 48 months not
 1-100 over 42 months.
@@ -234,7 +234,7 @@ wishing to extend the lock-up period on parts of a Position requires a similar s
 
 Staking HNT for veHNT will be done on [Realms](https://dao-beta.mango.markets/realms).
 
-:::note This is not available today.
+:::info This is not available today.
 
 Check out a [DAO beta view](https://dao-beta.mango.markets/dao/MNGO) on Realms today.
 
@@ -334,7 +334,7 @@ change and the table below will be updated.
 
 No. You can hold your veHNT as is or delegate to a subDAO at any time.
 
-:::note
+:::info
 
 Changing delegation is allowed, but any delegation changes within a Solana Epoch will void any
 delegation rewards within that Epoch. A Solana Epoch is 24 hours long.
