--- a/docs/troubleshooting/witnesses.mdx
+++ b/docs/troubleshooting/witnesses.mdx
@@ -61,7 +61,7 @@ added.
 
 Total: 37 Witnesses
 
-:::note
+:::info
 
 Witnesses are _historical and informational only_. It is not indicative of future earnings.
 
