--- a/docs/wallets/app-wallet/discovery-mode.mdx
+++ b/docs/wallets/app-wallet/discovery-mode.mdx
@@ -24,7 +24,7 @@ Discovery Mode is a marriage between several core components on the Helium netwo
 Router, Console, and the Miner. Hotspots, when in Discovery Mode, acts like a device on the Helium
 network, sending data just like any sensor would.
 
-:::note
+:::info
 
 Hotspots that hear Discovery Mode packets are able to confirm directly with Router, even if they're
 relayed. This is different than how receipts work with Proof-of-Coverage. More on that later.
@@ -49,7 +49,7 @@ Once a Hotspot device is created in console, an integration is automatically ass
 device, where responses to Discovery Mode packets are stored. The packet data is stored in a
 database that only the API has access to.
 
-:::note
+:::info
 
 Data Credits are used to send device data on the Helium network. For a limited time, Helium will
 cover the cost to send Discovery Mode packets.
@@ -62,7 +62,7 @@ After receiving a request from Router, the miner on Hotspots is instructed to st
 These packets are similar in size to Proof-of-Coverage packets. Miner is instructed to send 10
 Discovery Mode packets.
 
-:::note
+:::info
 
 Discovery Mode sends 10x more packets than a normal Beacon for Proof-of-Coverage. It is normal to
 see more Hotspots respond to Discovery Mode than Beacons. Also keep in mind that Relayed Hotspots do
