--- a/docs/wallets/app-wallet/hexagons.mdx
+++ b/docs/wallets/app-wallet/hexagons.mdx
@@ -64,7 +64,7 @@ parent resolution 8 hexagon.
 The Helium app displays resolution 8 hexagons, which have an area of 0.7373276 km², and edge length
 of 0.461354684 km. About 130 resolution 8 hexagons cover the city of San Francisco.
 
-:::note
+:::info
 
 Resolution 8 hexagons may be temporary. Depending on the outcome of an investigation to see how
 Resolution 8 asserts affect Proof-of-Coverage, the resolution may change from resolution 8 to 9, or
@@ -74,7 +74,7 @@ another value. This will be brought forth in a Helium Improvement Proposal.
 
 ## Viewing Hotspots in Resolution 8
 
-:::note
+:::info
 
 Viewing Resolution 8 Hexagons is only available on app version 3.3.0 and later.
 
