--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -14,7 +14,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <img className="docsheader" src={useBaseUrl('img/wallets/helium-wallet-app/header.png')} />
 
-:::note Download the Helium Wallet Apps
+:::info Download the Helium Wallet Apps
 
 <div class="container">
   <div class="row">
