--- a/docs/wallets/twelve-words.mdx
+++ b/docs/wallets/twelve-words.mdx
@@ -43,7 +43,7 @@ help you recover them.
 Luckily, there is an easy way to back up those 12 words. Write them down, save them, and back them
 up. Go to the Helium Hotspot App > … menu > Reveal Words.
 
-:::note
+:::info
 
 Do not log out of your phone wallet or uninstall the app without first writing down your 12-word
 
@@ -65,7 +65,7 @@ When entering the 12-word make sure you:
 No Helium Support or Admin person will EVER ask for your 12 or 24-word or ask you to enter them into
 a website to fix a problem.
 
-:::note
+:::info
 
 Remember these important things.
 
