--- a/docs/wallets/twenty-four-words.mdx
+++ b/docs/wallets/twenty-four-words.mdx
@@ -48,7 +48,7 @@ help you recover them.
 Luckily, there is an easy way to back up those 24 words. Write them down, save them, and back them
 up. Go to the Helium Wallet App > ⚙️ icon > Reveal Words.
 
-:::note
+:::info
 
 Do not log out of your phone wallet or uninstall the app without first writing down your 24-word.
 
@@ -69,7 +69,7 @@ When entering the 24-word make sure you:
 No Helium Support or Admin person will EVER ask for your 12 or 24-word or ask you to enter them into
 a website to fix a problem.
 
-:::note
+:::info
 
 Remember these important things.
 
