--- a/docs/wallets/wallets.mdx
+++ b/docs/wallets/wallets.mdx
@@ -47,7 +47,7 @@ Hotspot Owners will start earning IOT as the blockchain migration will launch th
 view IOT earned by your Hotspot, use the Helium Wallet app. 5G Hotspot Owners will continue earning
 MOBILE and will additionally begin to earn IOT.
 
-:::note 5G Hotspot Owners
+:::info 5G Hotspot Owners
 
 Your 5G Hotspot will become an NFT, and your CBRS Radios will remain with a serial number, just like
 before the Solana transition.
@@ -114,7 +114,7 @@ Hotspots. Read more about this upcomging change on the
 All Helium Wallets will need to be migrated to the Solana blockchain. What this means for each
 Helium Wallet type is explained below.
 
-:::note Download the Helium Wallet Apps
+:::info Download the Helium Wallet Apps
 
 <div class="container">
   <div class="row">
@@ -259,7 +259,7 @@ Read more about Helium 12-word and 24-word here:
 - [12-Word Seed Phrase](/wallets/twelve-words)
 - [24-Word Seed Phrase](/wallets/twenty-four-words)
 
-:::note
+:::info
 
 Transferring Hotspot ownership between 12-word and 24-word Wallets can only be done using the
 [Wallet CLI](/wallets/cli-wallet)
