--- a/docs/api/blockchain/blocks.mdx
+++ b/docs/api/blockchain/blocks.mdx
@@ -339,7 +339,7 @@ _Query Parameters_
 
 200: OK
 
-:::note Transaction Units
+:::info Transaction Units
 
 Remember that transaction units are in `bones`. Read more
 [here](/api/blockchain/introduction/#transaction-units)
@@ -660,7 +660,7 @@ _Query Parameters_
 
 200: OK
 
-:::note Transaction Units
+:::info Transaction Units
 
 Remember that transaction units are in `bones`. Read more
 [here](/api/blockchain/introduction/#transaction-units)
