--- a/docs/api/blockchain/dc-burns.mdx
+++ b/docs/api/blockchain/dc-burns.mdx
@@ -52,7 +52,7 @@ _Query Parameters_
 
 Return the last 3 hours of burns bucketed by hour
 
-:::note Transaction Units
+:::info Transaction Units
 
 Remember that transaction units are in `bones`. Read more
 [here](/api/blockchain/introduction/#transaction-units)
@@ -120,7 +120,7 @@ _No Parameters_
 
 Return the current DC burn stats
 
-:::note Transaction Units
+:::info Transaction Units
 
 Remember that transaction units are in `bones`. Read more
 [here](/api/blockchain/introduction/#transaction-units)
@@ -198,7 +198,7 @@ _Query Parameters_
 
 Return a page of DC burns. Only a segment of the returned list is shown here.
 
-:::note Transaction Units
+:::info Transaction Units
 
 Remember that transaction units are in `bones`. Read more
 [here](/api/blockchain/introduction/#transaction-units)
