--- a/docs/api/blockchain/hotspots.mdx
+++ b/docs/api/blockchain/hotspots.mdx
@@ -821,7 +821,7 @@ _Query Parameters_
 
 This lists the activity for a Hotspot which only had two transactions at the time of the request.
 
-:::note Transaction Units
+:::info Transaction Units
 
 Remember that transaction units are in `bones`. Read more
 [here](/api/blockchain/introduction/#transaction-units)
@@ -1017,7 +1017,7 @@ _Query Parameters_
 Fetches consensus groups that the hotspot with address
 `11ztQpmCJbfPxv3RjsnvFTozbikpZ72dgmHTYwBQ2n2rABytnLE` was a part of
 
-:::note Transaction Units
+:::info Transaction Units
 
 Remember that transaction units are in `bones`. Read more
 [here](/api/blockchain/introduction/#transaction-units)
