--- a/docs/solana/primer.mdx
+++ b/docs/solana/primer.mdx
@@ -76,7 +76,7 @@ import { daoKey } from "@helium/helium-sub-daos-sdk"
 const daoAddr = daoKey(new PublicKey("...hnt mint..."))[0];
 ```
 
-:::note Helium PDAs and Mints
+:::info Helium PDAs and Mints
 
 You'll notice that if you trace the graph of Helium PDAs, they always lead back to the address of
 either the HNT token mint, or the subdao token mint.
