--- a/docs/wallets/app-wallet/transaction-failures.mdx
+++ b/docs/wallets/app-wallet/transaction-failures.mdx
@@ -16,7 +16,7 @@ The Helium app automatically notifies users whenever a transaction fails. Transa
 a number of reasons - the most common is typically insufficient funds (not enough $HNT in the
 wallet) or a nonce issue.
 
-:::note
+:::info
 
 What is a nonce? Nonce is a number included in every transaction to guarantee the data is "live" and
 not replayed, preventing the blockchain from replay attacks. The Helium app uses a speculative
