--- a/docs/wallets/cli.mdx
+++ b/docs/wallets/cli.mdx
@@ -221,7 +221,7 @@ key and can submit transactions to the blockchain API.
 
 Helium Wallets created using the CLI can be exported to the Helium Wallet App.
 
-:::note Version Requirements
+:::info Version Requirements
 
 The `export` feature requires:
 
